pymvpa2 (2.2.0-4) UNRELEASED; urgency=low

  * debian/control:
    - specify git branch for debian packaging of pymvpa2. Thanks Julien
      Cristau for the report

 --

pymvpa2 (2.2.0-3) unstable; urgency=low

  * debian/patches
    - changeset_bab55a4a390c9c4b337ead5877868f7f7debc208.diff
      Tollerate "Probabalistic" (mention the typo) and "fixed"
      FSL atlases

 -- Yaroslav Halchenko <debian@onerussian.com>  Mon, 06 May 2013 15:02:58 -0400

pymvpa2 (2.2.0-2) unstable; urgency=low

  * debian/patches
    - changeset_79bc8ecad13fe43447f8a262ed03147cbe7da326.diff
      changeset_cdba16f73f5aa74cf3002f027a1d38e408b0361b.diff
      Address numpy 1.7.1 compatibility in unittests

 -- Yaroslav Halchenko <debian@onerussian.com>  Tue, 30 Apr 2013 11:35:24 -0400

pymvpa2 (2.2.0-1) unstable; urgency=low

  * Fresh upstream release:
    - provides tutorial (in -doc package) as ipython notebooks.
      Added ipython-notebook into Suggests
    - all cmdline tools have disambiguating prefix thus are
      installed now without conflict with pymvpa (0.4.x) package.
  * Dropping support of python 2.5 (failing tests) -- added X-Python-Version

 -- Yaroslav Halchenko <debian@onerussian.com>  Sun, 16 Sep 2012 06:23:51 -0400

pymvpa2 (2.1.0-1) unstable; urgency=low

  * Fresh upstream release
  * debian/control
    - unwrapped Depends/Recommends and sorted
    - moved python-lxml and python-sklearn into Recommends
    - added liblapack-dev into Recommends -- provides liblapack.so
      optionally used by Hyperalignment
  * debian/upstream -- added with a canonical reference

 -- Yaroslav Halchenko <debian@onerussian.com>  Thu, 28 Jun 2012 13:28:19 -0400

pymvpa2 (2.0.1-1) unstable; urgency=low

  * Fresh upstream release
    - all debian/patches were upstreamed
  * debian/control
    - policy boosted to 3.9.3 (no changes)
  * debian/copyright
    - updated for DEP5 v1.0
  * debian/rules
    - added a call to dh_numpy where available for proper NumPy dependencies
